# OpenNeato

./: .gitignore  LICENSE  README.md  requirements.txt
firmware/ros2_ws/src/openneato_driver/: package.xml  setup.cfg  setup.py
firmware/ros2_ws/src/openneato_driver/openneato_driver/: coverage_planner.py  docking_server.py  driver_node.py  mapping_node.py  mission_control.py
firmware/ros2_ws/src/openneato_interfaces/: CMakeLists.txt  package.xml
firmware/ros2_ws/src/openneato_interfaces/action/: DockToBase.action
firmware/ros2_ws/src/openneato_nav/: package.xml  setup.cfg  setup.py
firmware/ros2_ws/src/openneato_nav/launch/: navigation_launch.py
firmware/ros2_ws/src/openneato_nav/params/: nav2_params.yaml
firmware/ros2_ws/src/openneato_nav/urdf/: neato.urdf
installer/: install.sh
web_interface/backend/app/: main.py  models.py  ros_client.py
web_interface/frontend/: editor.html  index.html
web_interface/frontend/js/: dashboard.js  editor.js
