<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openneato_nav</name>
  <version>0.1.0</version>
  <description>Navigation configuration and launch files for OpenNeato</description>
  <maintainer email="maintainer@openneato.org">OpenNeato Maintainer</maintainer>
  <license>GPL-3.0</license>

  <depend>nav2_bringup</depend>
  <depend>nav2_simple_commander</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>